# relion

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  INSTALL.sh  LICENSE  Makefile.am  Makefile.in  NOTES  README  README.md  README_sycl.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  ctf.html  environment.yml  environment_blackwell.yml  index.html  pyproject.toml  relion.h  relion.pc.in  remove_duplicates.py  setup.cfg  vis_refinement.py
src/apps/: CMakeLists.txt  CMakeLists.txt.orig  Zernike_test.cpp  align_symmetry.cpp  align_tiltseries.cpp  align_tiltseries_mpi.cpp  autopick.cpp  autopick_mpi.cpp  batchrun.cpp  batchrun_mpi.cpp  class2d_features.cpp  class_ranker.cpp  convert_star.cpp  convert_to_tiff.cpp  convert_to_tiff_mpi.cpp  cs_fit.cpp  ctf_mask_test.cpp  ctf_nyquist_test.cpp  ctf_refine.cpp  ctf_refine_mpi.cpp  ctf_toolbox.cpp  damage_fit.cpp  defocus_fit.cpp  defocus_stats.cpp  demodulate.cpp  display.cpp  double_bfac_fit.cpp  double_reconstruct_openmp.cpp  eer_test.cpp  eer_to_tiff.cpp  em_motion.cpp  estimate_gain.cpp  external_reconstruct.cpp  find_tiltpairs.cpp  flex_analyse.cpp  flex_analyse_mpi.cpp  free_aberration_plot.cpp  ft_test.cpp  helix_inimodel2d.cpp  helix_toolbox.cpp  (+75 more)
src/jaz/gravis/: CMakeLists.txt  Exception.h  Mesh.h  OBJWriter.h  StringFormat.h  Timer.hpp  t2Matrix.h  t2Vector.h  t3Matrix.h  t3Vector.h  t4Matrix.h  t4Vector.h  tGray_A.h  tImage.h  tMesh.h  tQuaternion.h  tRGBA.h  tVarMatrix_blas.hxx
src/jaz/gravis/.svn/: entries
src/jaz/gravis/.svn/text-base/: NMesh.h.svn-base  NTuple.h.svn-base  StringFormat.h.svn-base  t2Matrix.h.svn-base  t2Vector.h.svn-base  t4Vector.h.svn-base  tMatrix.h.svn-base  tRGB.h.svn-base  tVarMatrix.h.svn-base  tVarMatrix_blas.h.svn-base
src/jaz/gravis/colour/: CMakeLists.txt
src/jaz/gravis/colour/.svn/: all-wcprops  entries
src/jaz/gravis/gravis/.svn/: all-wcprops  entries
src/jaz/gravis/io/: mesh.h
src/jaz/gravis/io/image/.svn/: all-wcprops
src/jaz/gravis/io/mesh/: OBJWriter.h
src/jaz/gravis/io/mesh/.svn/: all-wcprops  entries
src/jaz/gravis/private/: CMakeLists.txt  tImageConverter.hxx  tImageIO.hxx  tImageIO_JPG.hxx  tRefCPtr.h
src/jaz/gravis/private/.svn/text-base/: tDeterminants.h.svn-base  (+1 more)
src/jaz/gravis/tImage/: CMakeLists.txt  access.hxx  interpolation.hxx  normalization.h  traits.h
src/jaz/gravis/tImage/.svn/: all-wcprops
tests/: CMakeLists.txt  RelionTests.cmake  ap_s_c2d.star  ap_s_c2d_red.star  ctf.cpp  ref_10k_diff2s.txt  ref_10k_diff2s_noCTF.txt  ref_10k_weights_afterstore.txt  ref_3D_ctf.mrc  ref_3D_fref.mrc  ref_3D_frefctf.mrc  ref_3D_otfshift.mrc  ref_Fweights.txt  ref_it002_angdist.bild  ref_it002_data.star  ref_it002_optimiser.star  ref_it002_sampling.star  ref_model.mrc  ref_mresol_fine.mrc  ref_noCTF_10k_weights.txt  ref_noCTF_shifted_image.mrc  ref_norm_correction.txt  ref_shifted_image.mrc  ref_sigma2_noise.txt  relion.h  test_ctf.cpp  tests.cpp
tests/cmake/: BuildFFTW.cmake  BuildTypes.cmake
tests/data/: mtf_falcon3EC_200kV.star
tests/ref_output/: out_it000_class001.mrc  out_it000_class001_angdist.bild  out_it000_data.star  out_it000_model.star  out_it000_optimiser.star  out_it001_class001.mrc  out_it001_class001_angdist.bild  out_it001_data.star  out_it001_model.star  out_it001_optimiser.star  out_it001_sampling.star  out_it002_class001.mrc  out_it002_class001_angdist.bild  out_it002_model.star  out_it002_optimiser.star  out_it003_class001.mrc  out_it003_class001_angdist.bild  out_it003_data.star  out_it003_model.star  out_it003_optimiser.star  out_it003_sampling.star  out_it004_class001.mrc  out_it004_class001_angdist.bild  out_it004_data.star  out_it004_model.star  out_it004_optimiser.star  out_it004_sampling.star  out_it005_class001.mrc  out_it005_class001_angdist.bild  out_it005_data.star  out_it005_model.star  out_it005_optimiser.star  out_it005_sampling.star
tests/scripts/: star_datablock_ctfdat  star_plottable
tests/single_trans/: run.sh
tests/src/: assembly.cpp  autopicker.cpp  backprojector.cpp  backprojector.h  ctf.h  euler.cpp  fftw.h  filename.cpp  funcs.h  gui_entries.h  gui_jobwindow.cpp  gui_mainwindow.cpp  gui_mainwindow.h  helix.cpp  local_symmetry.cpp  metadata_label.h  metadata_table.cpp  micrograph_model.cpp  ml_model.cpp  ml_optimiser.cpp  ml_optimiser.h  ml_optimiser_mpi.cpp  motioncorr_runner.h  motioncorr_runner_mpi.h  mpi.h  particle_polisher_mpi.cpp  particle_polisher_mpi.h  particle_sorter.h  particle_sorter_mpi.cpp  pipeline_jobs.h  pipeliner.cpp  postprocessing.cpp  preprocessing_mpi.h  rwSPIDER.h  strings.h  symmetries.cpp  transformations.cpp
tests/src/Healpix_2.15a/: arr.h  lsconstants.h
tests/src/acc/cpu/: cpu_helper_functions.cpp  cpu_helper_functions.h  cuda_stubs.h
tests/src/acc/cpu/cpu_kernels/: BP.h  diff2.h
tests/src/acc/cuda/: cuda_fft.h  cuda_settings.h
tests/src/acc/cuda/cuda_kernels/: cuda_device_utils.cuh
tests/src/apps/: CMakeLists.txt  ctf_toolbox.cpp  double_reconstruct_openmp.cpp  find_tiltpairs.cpp  flex_analyse.cpp  free_aberration_plot.cpp  localsym.cpp  localsym_mpi.cpp  maingui.cpp  motion_refine_mpi.cpp  mrc2vtk.cpp  particle_symmetry_expand.cpp  prepare_subtomo.cpp  preprocess_mpi.cpp  project.cpp  refine_mpi.cpp  run_ctffind_mpi.cpp  tiltpair_plot.cpp
tests/src/gpu_utils/: cuda_backprojector.h  cuda_utils_cub.cuh
tests/src/jaz/: aberration_fit.h  distribution_helper.cpp  frame_merge.cpp  fsc_helper.cpp  image_log.h  interpolation.h  micrograph_handler.h  parallel_ft.cpp  reference_map.cpp  refinement_helper.h  resampling_helper.h  slice_helper.cpp  tensor3x3.h  tomo_stack.cpp  tomo_stack.h  volume_integration.h
tests/src/jaz/archive/: motion_em.h
tests/src/jaz/ctf/: ctf_refiner.h  ctf_refiner_mpi.cpp  defocus_estimator.h  magnification_helper.cpp
tests/src/jaz/d3x3/: dsyev2.h
tests/src/jaz/gravis/.svn/: all-wcprops
tests/src/jaz/gravis/io/: CMakeLists.txt
tests/src/jaz/motion/: bfactor_estimator.h  frame_recombiner.cpp  gp_motion_fit.h  two_hyperparameter_fit.h
tests/src/jaz/optimization/: nelder_mead.cpp  optimization.cpp
tests/tests/: RelionTests.cmake
(+1599 files in other folders)
